# Argus

./: pyproject.toml  search.py
config/profiles/default/: companies.yaml
